--- a/app/views/users/healthrecord.html.erb
+++ b/app/views/users/healthrecord.html.erb
@@ -8,7 +8,7 @@
 <div class="container" id="dashboardbody">
 
       <div class="healthupload">
-        <h3> Health Upload </h3>
+        <h3> Health Record </h3>
 
 
         <table class="table" id="healthtable">
