remove js plugin

--- a/app/views/users/userdashboard.html.erb
+++ b/app/views/users/userdashboard.html.erb
@@ -148,9 +148,9 @@
                     <button class="btn btn-default close-btn">  CLOSE</button>
 
                   </div>
-                  <script src="js/vendor/jquery.ui.widget.js"></script>
+                  <!-- <script src="js/vendor/jquery.ui.widget.js"></script>
                   <script src="js/jquery.iframe-transport.js"></script>
-                  <script src="js/jquery.fileupload.js"></script>
+                  <script src="js/jquery.fileupload.js"></script> -->
 
 
 
