--- a/app/views/users/healthrecord.html.erb
+++ b/app/views/users/healthrecord.html.erb
@@ -3,66 +3,71 @@
 <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.11/js/jquery.dataTables.js"></script>
 
 
+<div class="row">
+  <div id="wrapper">
+      <div class="container" id="dashboardbody">
+            <div class="healthupload">
+                <h3> Health Record </h3>
 
-<div id="wrapper">
-<div class="container" id="dashboardbody">
 
-      <div class="healthupload">
-        <h3> Health Record </h3>
+                <table class="table" id="healthtable">
+                  <thead>
+                    <tr>
+                      <td>   </td>
+                      <td> Date </td>
+                      <td> Name </td>
+                      <td> Doctors Review </td>
+                      <td> View </td>
+                    </tr>
+                  </thead>
 
+                  <tbody>
+                    <%if @user_health != nil  %>
+                    <%  @user_health.all.order(created_at: :desc).each do |health_record| %>
+                     <tr>
+                       <td>
+                          <%= image_tag(health_record.record_image, class: "img-center",  width:"100") %>
+                       </td>
+                       <td>
+                         <%= health_record.created_at.strftime("%x")%>
+                       </td>
+                       <td>
+                         <%= health_record.record_name%>
+                       </td>
+                       <td>
+                         <% if health_record.review.nil? %>
+                            <i> Pending Review .. </i>
 
-        <table class="table" id="healthtable">
-          <thead>
-            <tr>
-              <td>   </td>
-              <td> Date </td>
-              <td> Name </td>
-              <td> Doctors Review </td>
-              <td> View </td>
-            </tr>
-          </thead>
+                          <% else %>
+                          <b><%= health_record.review%></b>
 
-          <tbody>
-            <%if @user_health != nil  %>
-            <%  @user_health.all.order(created_at: :desc).each do |health_record| %>
-             <tr>
-               <td>
-                  <%= image_tag(health_record.record_image, class: "img-center",  width:"100") %>
-               </td>
-               <td>
-                 <%= health_record.created_at.strftime("%x")%>
-               </td>
-               <td>
-                 <%= health_record.record_name%>
-               </td>
-               <td>
-                 <% if health_record.review.nil? %>
-                    <i> Pending Review .. </i>
+                          <% end %>
+                       </td>
+                       <!-- <td>
+                         <%#= link_to 'DOWNLOAD', health_record.file.url, class: "btn btn-success " %>
+                       </td> -->
+                        <td>
+                          <%= link_to 'OPEN', health_record.file.url, :target => '_blank', class: "btn btn-success" %>
+                        </td>
 
-                  <% else %>
-                  <b><%= health_record.review%></b>
+                     </tr>
+                     <% end %>
+                   <% end %>
+                  </tbody>
+                </table>
 
-                  <% end %>
-               </td>
-               <!-- <td>
-                 <%#= link_to 'DOWNLOAD', health_record.file.url, class: "btn btn-success " %>
-               </td> -->
-                <td>
-                  <%= link_to 'OPEN', health_record.file.url, :target => '_blank', class: "btn btn-success" %>
-                </td>
-
-             </tr>
-             <% end %>
-           <% end %>
-          </tbody>
-        </table>
-
-        </div>
+              </div>
+            </div>
+      </div>
+  </div>
 </div>
-</div>
+
 
 <script>
+$('#healthtable').DataTable();
 
-    $('#healthtable').DataTable();
+$( document ).ready(function() {
+  $('#healthtable').DataTable();
+});
 
 </script>
