--- a/app/views/users/healthupload.html.erb
+++ b/app/views/users/healthupload.html.erb
@@ -1,229 +1,66 @@
 <div class="container">
   <p id="notice"><%= notice %></p>
+  <h3> UPLOAD YOUR MEDICAL RECORD </h3>
+  <div class="upload_form">
+      <div class="row">
+        <div class="container">
+        <%= form_for Health.new,class:"form-control", html: { multiple: true }, remote: true do |f|%>
+            <%= f.hidden_field :user_id, value: @user.id %>
+          <!-- <div class="col-xs-6 col-sm-6 col-md-6">
+            STEP 1: SELECT RECORD CATEGORY
+            <%#= f.select :record_category_id, RecordCategory.all.collect {|p| [ p.name, p.id ] }, {include_blank: 'None'}, class:"form-control", required: true %>
 
-        <h3 class="center animated bounceInRight"> Upload Your Medical Record</h3>
-        <div class="medical_record animated fadeInUp">
-          <div class="row center">
-            <div class="col-xs-12 col-sm-12 col-md-4">
-              <div class="well well-lg rounded shadow hover">
-                <%= image_tag("blood.png", class: "img-center",  width:"100") %>
-                <br>
-                <br>
-                <center>
-                <%= form_for Health.new,class:"form-control", multipart: true, remote: true do |f|%>
-                  <%= f.hidden_field :user_id, value: @user.id %>
-                  <%= f.select :record_category_id, RecordCategory.all.collect {|p| [ p.name, p.id ] }, {include_blank: 'None'}, class:"form-control", required: true %>
-                  <%= f.file_field :file,class:"form-control",multipart: true, required: true%>
+          </div> -->
+          <div class="col-xs-12 col-sm-12 col-md-12">
 
-                 <%= f.submit "SUBMIT", class: "btn btn-danger"%>
-               <% end %>
-               <center>
-                <br><br>
-                <span><b>Blood</b></span>
-              </div>
-            </div>
-
-            <div class="col-xs-12 col-sm-12 col-md-4">
-              <div class="well well-lg rounded shadow hover">
-                  <%= image_tag("urine.png", class: "img-center",  width:"100") %>
-                <br>
-                <br>
-                <%= form_for Health.new do |f|%>
-                  <%= f.hidden_field :user_id, value: @user.id %>
-
-                  <%= f.hidden_field :record_category_id, value: 2 %>
-                  <%= f.file_field :file %>
-                  <%= f.submit "SUBMIT", class: "btn btn-warning"%>
-
-                <% end %>
-
-                </span>
-                <br><br>
-                <span><b>Urine</b></span>
-              </div>
-            </div>
-
-            <div class="col-xs-12 col-sm-12 col-md-4">
-              <div class="well well-lg rounded shadow hover">
-                <%= image_tag("xray.png", class: "img-center",  width:"100") %>
-                <br>
-                <br>
-                <%= form_for Health.new do |f|%>
-                  <%= f.hidden_field :user_id, value: @user.id %>
-
-                  <%= f.hidden_field :record_category_id, value: 3 %>
-                  <%= f.file_field :file %>
-                  <%= f.submit "SUBMIT", class: "btn btn-warning"%>
-
-                <% end %>
-                <br><br>
-                <span><b>X-Ray</b></span>
-              </div>
-            </div>
+            STEP 1: SELECT FILE/FILES
+            <br>
+            <br>
+            <%= f.file_field :file,class:"form-control", multiple: true, name:  "health[file]", required: true%>
           </div>
-
-          <br>
-
-          <div class="row center">
-            <div class="col-xs-12 col-sm-12 col-md-4">
-              <div class="well well-lg rounded shadow hover">
-                <%= image_tag("ultrasound.png", class: "img-center",  width:"100") %>
-                <br>
-                <br>
-                <%= form_for Health.new  do |f|%>
-                  <%= f.hidden_field :user_id, value: @user.id %>
-
-                  <%= f.hidden_field :record_category_id, value: 4 %>
-                  <%= f.file_field :file %>
-                  <%= f.submit "SUBMIT", class: "btn btn-warning"%>
-
-                <% end %>
-                <br><br>
-                <span><b>Ultrasound</b></span>
-              </div>
-            </div>
-
-            <div class="col-xs-12 col-sm-12 col-md-4">
-              <div class="well well-lg rounded shadow hover">
-                <%= image_tag("ctscan.png", class: "img-center",  width:"100") %>
-                <br>
-                <br>
-
-                <%= form_for Health.new do |f|%>
-                  <%= f.hidden_field :user_id, value: @user.id %>
-
-                  <%= f.hidden_field :record_category_id, value: 5 %>
-                  <%= f.file_field :file %>
-                  <%= f.submit "SUBMIT", class: "btn btn-warning"%>
-
-                <% end %>
-
-                <br><br>
-                <span><b>CT-Scan</b></span>
-              </div>
-            </div>
-
-            <div class="col-xs-12 col-sm-12 col-md-4">
-              <div class="well well-lg rounded shadow hover">
-                <%= image_tag("mri.png", class: "img-center",  width:"100") %>
-                <br>
-                <br>
-                <%= form_for Health.new do |f|%>
-                  <%= f.hidden_field :user_id, value: @user.id %>
-
-                  <%= f.hidden_field :record_category_id, value: 6 %>
-                  <%= f.file_field :file %>
-                  <%= f.submit "SUBMIT", class: "btn btn-warning"%>
-
-                <% end %>
-                <br><br>
-                <span><b>MRI</b></span>
-              </div>
-            </div>
-          </div>
-
-          <br>
-
-          <div class="row center">
-            <div class="col-xs-12 col-sm-12 col-md-4">
-              <div class="well well-lg rounded shadow hover">
-                <%= image_tag("petscan.png", class: "img-center",  width:"100") %>
-                <br>
-                <br>
-
-                <%= form_for Health.new do |f|%>
-                  <%= f.hidden_field :user_id, value: @user.id %>
-
-                  <%= f.hidden_field :record_category_id, value: 7 %>
-                  <%= f.file_field :file %>
-                  <%= f.submit "SUBMIT", class: "btn btn-warning"%>
-
-                <% end %>
-                <br><br>
-                <span><b>PET scan</b></span>
-              </div>
-            </div>
-
-            <div class="col-xs-12 col-sm-12 col-md-4">
-              <div class="well well-lg rounded shadow hover">
-                  <%= image_tag("scopes.png", class: "img-center",  width:"100") %>
-                <br>
-                <br>
-                <%= form_for Health.new do |f|%>
-                  <%= f.hidden_field :user_id, value: @user.id %>
-
-                  <%= f.hidden_field :record_category_id, value: 8 %>
-                  <%= f.file_field :file %>
-                  <%= f.submit %>
-                <% end %>
-                <br><br>
-                <span><b>Scopes</b></span>
-              </div>
-            </div>
-
-            <div class="col-xs-12 col-sm-12 col-md-4">
-              <div class="well well-lg rounded shadow hover">
-                <%= image_tag("cancermarker.png", class: "img-center",  width:"100") %>
-                <br>
-                <br>
-                <%= form_for Health.new do |f|%>
-                  <%= f.hidden_field :user_id, value: @user.id %>
-
-                  <%= f.hidden_field :record_category_id, value: 9 %>
-                  <%= f.file_field :file %>
-                  <%= f.submit "SUBMIT", class: "btn btn-warning"%>
-
-                <% end %>
-                <br><br>
-                <span><b>Cancer Markers</b></span>
-              </div>
-            </div>
-          </div>
-
-          <br>
-
-          <div class="row center">
-            <div class="col-xs-12 col-sm-12 col-md-4">
-              <div class="well well-lg rounded shadow hover">
-                <%= image_tag("dental.png", class: "img-center",  width:"100") %>
-                <br>
-                <br>
-                <%= form_for Health.new do |f|%>
-                  <%= f.hidden_field :user_id, value: @user.id %>
-
-                  <%= f.hidden_field :record_category_id, value: 10 %>
-                  <%= f.file_field :file %>
-                  <%= f.submit "SUBMIT", class: "btn btn-warning"%>
-
-                <% end %>
-                <br><br>
-                <span><b>Dental</b></span>
-              </div>
-            </div>
-
-
-
-            <div class="col-xs-12 col-sm-12 col-md-4">
-              <div class="well well-lg rounded shadow hover">
-                <%= image_tag("others.png", class: "img-center",  width:"100") %>
-                <br>
-                <br>
-                <%= form_for Health.new do |f|%>
-                  <%= f.hidden_field :user_id, value: @user.id %>
-
-                  <%= f.hidden_field :record_category_id, value: 11 %>
-                  <%= f.file_field :file %>
-                  <%= f.submit "SUBMIT", class: "btn btn-warning"%>
-
-                <% end %>
-                <br><br>
-                <span><b>Others</b></span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+          <!-- <div class="col-xs-4 col-sm-4 col-md-4">
+            <%#= f.submit "SUBMIT", class: "btn btn-danger  btn-block"%>
+         </div> -->
+       <% end %>
+     </div>
+     </div>
+     <div id="progress">
+       <br>
+       <br>
+       <br>
+       STEP 2: PROGRESS
+       <br>
+        <div class="bar" style="width: 0%;"></div>
+        <br>
+        <br>
     </div>
+    <div class="check_uploads">
+      STEP 3: CHECK RECORDS<br>
+      <br>
+      <%= link_to "VIEW", health_record_path(@user), class: "btn btn-danger btn-block"%><br>
+      <!-- <center>
+        OR <br>
+      <center> -->
+
+    </div>
+
+  </div>
+  </div>
+
+</div>
+
+<script>
+$("#new_health").fileupload({
+  progressall: function (e, data) {
+        var progress = parseInt(data.loaded / data.total * 100, 10);
+        $('#progress .bar').css(
+            'width',
+            progress + '%'
+        );
+    }
+});
+
+</script>
 
 
 
