--- a/app/views/users/userdashboard.html.erb
+++ b/app/views/users/userdashboard.html.erb
@@ -363,10 +363,10 @@
                             <div class="row">
                                 <div class="col-xs-12 col-sm-12 col-md-12">
                                     <div class="graph">
-                                      <% @blood_records %>
-                                        <!-- <%#= content_tag :div, id: "orders_chart", data: {user_health: @user_health }%> -->
-                                      <%#= content_tag :div, "",id: "blood-graph" , data: {blood: blood}%>
-                                      	 <!-- <%#= content_tag :div, "", id: "p-active", data: {active: active_users} %> -->
+                                        <%  if @blood_records.pluck(:haemoglobin).compact.count > 1 %>
+                                        <h6> Haemoglobin </h6>
+                                          <%= line_chart blood %>
+                                         <% end %>
 
                                     </div>
                                 </div>
@@ -479,15 +479,17 @@
                         </div>
 
 
-                        <!-- <div class="col-xs-12 col-sm-5 col-md-5">
+                        <div class="col-xs-12 col-sm-5 col-md-5">
                             <div class="row">
                                 <div class="col-xs-12 col-sm-12 col-md-12">
-                                    <div class="graph"><img alt="" class="img-responsive" src=
-                                    "http://placehold.it/200x200">
-                                    </div>
+                                  <%  if @blood_records.pluck(:hba1c).compact.count > 1 %>
+                                    <h6> HBA1C </h6>
+                                    <%= line_chart hba1c %>
+                                   <% end %>
+
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
             </div>
@@ -633,15 +635,19 @@
                           </div>
 
 
-                          <!-- <div class="col-xs-12 col-sm-5 col-md-5">
+                          <div class="col-xs-12 col-sm-5 col-md-5">
                               <div class="row">
                                   <div class="col-xs-12 col-sm-12 col-md-12">
-                                      <div class="graph"><img alt="" class="img-responsive" src=
-                                      "http://placehold.it/200x200">
+                                      <div class="graph">
+                                        <%  if @blood_records.pluck(:total_cholestrol).compact.count > 1 %>
+                                          <h6> Total cholestrol </h6>
+                                          <%= line_chart total_cholestrol %>
+                                         <% end %>
+
                                       </div>
                                   </div>
                               </div>
-                          </div> -->
+                          </div>
                       </div>
                   </div>
               </div>
@@ -735,15 +741,18 @@
                         </div>
 
 
-                        <!-- <div class="col-xs-12 col-sm-5 col-md-4">
+                        <div class="col-xs-12 col-sm-5 col-md-4">
                             <div class="row">
                                 <div class="col-xs-12 col-sm-12 col-md-12">
-                                    <div class="graph"><img alt="" class="img-responsive" src=
-                                    "http://placehold.it/200x200">
+                                    <div class="graph">
+                                      <%  if @blood_records.pluck(:urea).compact.count > 1 %>
+                                        <h6> Urea </h6>
+                                        <%= line_chart urea %>
+                                       <% end %>
                                     </div>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
             </div>
@@ -775,19 +784,19 @@
 
 
                                         <div class="col-xs-6 col-sm-6 col-md-6">
-                                        <% if @user_blood %>
-                                          <% if @user_blood.tsh.present? %>
-                                            <% if @user_blood.tsh > 4.2|| @user_blood.tsh < 0.27 %>
-                                              <span class="label label-danger value"><%= @user_blood.tsh%></span>
+                                          <% if @user_blood %>
+                                            <% if @user_blood.tsh.present? %>
+                                              <% if @user_blood.tsh > 4.2|| @user_blood.tsh < 0.27 %>
+                                                <span class="label label-danger value"><%= @user_blood.tsh%></span>
 
-                                            <% else %>
-                                              <span class="label label-success value"><%= @user_blood.tsh %></span>
+                                              <% else %>
+                                                <span class="label label-success value"><%= @user_blood.tsh %></span>
+                                              <% end %>
                                             <% end %>
+                                            <% else %>
+                                            <span class="label label-danger value">0</span>
                                           <% end %>
-                                          <% else %>
-                                          <span class="label label-danger value">0</span>
-                                        <% end %>
-                                            <span class="measurement">mIU/L (0.270 - 4.200)</span>
+                                              <span class="measurement">mIU/L (0.270 - 4.200)</span>
                                         </div>
                                     </div>
                                     <br>
@@ -856,16 +865,19 @@
                             </div>
                         </div>
 
-<!--
+
                         <div class="col-xs-12 col-sm-5 col-md-5">
                             <div class="row">
                                 <div class="col-xs-12 col-sm-12 col-md-12">
-                                    <div class="graph"><img alt="" class="img-responsive" src=
-                                    "http://placehold.it/200x200">
+                                    <div class="graph">
+                                      <%  if @blood_records.pluck(:tsh).compact.count > 1 %>
+                                        <h6> TSH </h6>
+                                        <%= line_chart tsh %>
+                                       <% end %>
                                     </div>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
             </div>
@@ -986,15 +998,18 @@
                       </div>
 
 
-                      <!-- <div class="col-xs-12 col-sm-5 col-md-4">
+                      <div class="col-xs-12 col-sm-5 col-md-4">
                           <div class="row">
                               <div class="col-xs-12 col-sm-12 col-md-12">
-                                  <div class="graph"><img alt="" class="img-responsive" src=
-                                  "http://placehold.it/200x200">
+                                  <div class="graph">
+                                    <%  if @blood_records.pluck(:alanine_transaminase).compact.count > 1 %>
+                                      <h6> TSH </h6>
+                                      <%= line_chart tsh %>
+                                     <% end %>
                                   </div>
                               </div>
                           </div>
-                      </div> -->
+                      </div>
                   </div>
               </div>
           </div>
@@ -1054,15 +1069,17 @@
                                         </div>
 
 
-                                        <!-- <div class="col-xs-12 col-sm-5 col-md-4">
+                                        <div class="col-xs-12 col-sm-5 col-md-4">
                                             <div class="row">
                                                 <div class="col-xs-12 col-sm-12 col-md-12">
-                                                    <div class="graph"><img alt="" class="img-responsive" src=
-                                                    "http://placehold.it/200x200">
+                                                    <div class="graph">  <%  if @blood_records.pluck(:protein).compact.count > 1 %>
+                                                        <h6> Protein </h6>
+                                                        <%= line_chart protein %>
+                                                       <% end %>
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div> -->
+                                        </div>
                                     </div>
                                 </div>
                             </div>
