--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,14 +20,17 @@
 
 <body>
   <script src="//fast.appcues.com/18522.js"></script>
+  <% if user_signed_in? %>
+
   <script>
     Appcues.identify('<%= current_user.id %>', {
         email: '<%= current_user.email %>',
         name: '<%= current_user.full_name %>',
         // Additional user properties
     });
-</script>
+  </script>
 
+<% end %>
   <!-- Navigation -->
   <%= render 'pages/theme/menu' %>
 
